# tca-rust-snapshot-testing

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  progress.md  tasks.md
artifacts/v1.0.0/: SRS.md  architecture.md  type-mapping.md  verification.md
crates/inline-snapshot-testing/: Cargo.toml
crates/inline-snapshot-testing/src/: lib.rs
crates/inline-snapshot-testing/tests/: assert_inline_snapshot_swift_tests.rs  custom_dump_tests.rs  inline_snapshot_tests.rs
crates/snapshot-testing/: Cargo.toml
crates/snapshot-testing-custom-dump/: Cargo.toml
crates/snapshot-testing-custom-dump/src/: lib.rs
crates/snapshot-testing/examples/: ex01_basic_diff.rs  ex02_custom_strategy.rs  ex03_pullback.rs  ex04_record_modes.rs  ex05_doc_tests.rs
crates/snapshot-testing/src/: assert.rs  config.rs  diff.rs  diffing.rs  lib.rs  snapshotting.rs
crates/snapshot-testing/src/strategies/: data.rs  debug.rs  description.rs  json.rs  lines.rs  mod.rs
crates/snapshot-testing/tests/: assert_snapshot_swift_tests.rs  deprecation_tests.rs  helpers.rs  record_tests.rs  snapshot_testing_tests.rs  snapshots_trait_tests.rs  swift_testing_tests.rs  wait_tests.rs  with_snapshot_testing_tests.rs
crates/trinity/: Cargo.toml
crates/trinity/src/: check.rs  error.rs  init.rs  lib.rs  main.rs  scanner.rs  state.rs  status.rs
docs/curriculum/: 00-overview.md  01-ownership-basics.md  02-lifetimes.md  03-traits.md  04-generics.md  05-error-handling.md  06-closures.md  07-async.md  08-testing.md  09-modules.md  10-advanced.md
docs/curriculum/exercises/: README.md
