[package]
name = "inline-snapshot-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inline snapshot testing — snapshots embedded directly in test source code"

[dependencies]
snapshot-testing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
