[package]
name = "snapshot-testing-custom-dump"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pretty-print integration for snapshot-testing using custom dump serialization"

[dependencies]
snapshot-testing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
