[package]
name = "snapshot-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Rust port of Point-Free's swift-snapshot-testing — extensible snapshot testing with pluggable diffing strategies"

[dependencies]
similar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[[example]]
name = "ex01_basic_diff"
path = "examples/ex01_basic_diff.rs"

[[example]]
name = "ex02_custom_strategy"
path = "examples/ex02_custom_strategy.rs"

[[example]]
name = "ex03_pullback"
path = "examples/ex03_pullback.rs"

[[example]]
name = "ex04_record_modes"
path = "examples/ex04_record_modes.rs"

[[example]]
name = "ex05_doc_tests"
path = "examples/ex05_doc_tests.rs"
